<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.com.lalducin.android_101.TripDetail"
    tools:showIn="@layout/activity_trip_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <!--Start Example of Constraints-->

        <EditText
            android:id="@+id/destinationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/destinationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/destinationValue"
            android:text="@string/destination"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Finish Example of Constraints-->


        <!--TODO Fix the linear layout orientation-->

        <LinearLayout android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destinationValue">

            <!--TODO Change text size to 20sp and text color to colorPrimary-->

            <TextView
                android:id="@+id/departureDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/departureDateValue"
                android:text="@string/departure_date"
                android:textStyle="bold" />

            <!--TODO Set the corresponding input type and fix width-->

            <EditText
                android:id="@+id/departureDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" />

        </LinearLayout>


        <RelativeLayout android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <TextView
                android:id="@+id/budgetLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/budgetValue"
                android:text="@string/budget"
                android:textStyle="bold"/>

            <!--TODO Fix its position-->

            <EditText
                android:id="@+id/budgetValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:inputType="numberDecimal"/>

            <!--TODO Extract the hardcoded string to strings.xml, fix size and its position-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="FIX ME" />

        </RelativeLayout>

        <EditText
            android:id="@+id/commentsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="8dp"
            android:inputType="textMultiLine"
            android:maxLines="8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <!--TODO Add constraints to fix its position-->

        <TextView
            android:id="@+id/commentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/commentsValue"
            android:text="@string/comments"
            android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
